[metadata]
name = grpc_requests
# Version needs regex in setup.py.
url = https://github.com/spaceone-dev/grpc_requests
license = Apache License 2.0
maintainer = MEGAZONE SpaceONE Team
maintainer_email = admin@spaceone.dev
description = grpc for Humans. grpc reflection support client
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
exclude =
    tests

;[options.entry_points]
;console_scripts =
;    grequests = grpc_requests.cli:cli

[flake8]
ignore = E226,E302,E41
exclude = ./*/.venv,./*/venv,venv,.venv,./node_modules,./*/*_pb2.py,./*/*_pb2_grpc.py,build
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/grpc_requests/__init__.py: F401

[tool:pytest]
addopts =
    --verbose
testpaths =
    src/tests